[gd_scene load_steps=11 format=3 uid="uid://c0eitctnmmfyq"]

[ext_resource type="Script" uid="uid://bs0nsgaq02wha" path="res://mechanics/combat/combat_object.gd" id="1_71hcp"]
[ext_resource type="Script" uid="uid://dee1ltcbvk40j" path="res://ships/ship.gd" id="1_ge1ie"]
[ext_resource type="Script" uid="uid://dcwbdin8v4ea1" path="res://mechanics/combat/targeting_system.gd" id="2_a7xhq"]
[ext_resource type="Script" uid="uid://cbyi5e7q7giv7" path="res://mechanics/physics/rigid_body_direction.gd" id="3_5a5el"]
[ext_resource type="PackedScene" uid="uid://ikpmfsfblp3i" path="res://fx/target_overlay/target_overlay.tscn" id="4_o8dwl"]
[ext_resource type="Script" uid="uid://iwg61vye6cld" path="res://mechanics/physics/rigid_body_thruster.gd" id="5_66pr6"]
[ext_resource type="Script" uid="uid://dsn5f4t06t053" path="res://fx/target_overlay/combat_target_overlay.gd" id="5_ysmk8"]
[ext_resource type="Script" uid="uid://f03jc5amd0hq" path="res://mechanics/power/power_management_unit.gd" id="6_4hum8"]
[ext_resource type="PackedScene" uid="uid://dmneg7pw872n2" path="res://mechanics/radar/radar_object.tscn" id="8_lf0ki"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gsr85"]

[node name="Ship" type="RigidBody3D" node_paths=PackedStringArray("combat_object", "targeting_system", "rigid_body_thruster", "rigid_body_direction", "power_management_unit", "radar_object") groups=["saveable", "ships"]]
collision_mask = 2
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_gsr85")
script = ExtResource("1_ge1ie")
combat_object = NodePath("CombatObject")
targeting_system = NodePath("CombatObject/TargetingSystem")
rigid_body_thruster = NodePath("RigidBodyThruster")
rigid_body_direction = NodePath("RigidBodyDirection")
power_management_unit = NodePath("PowerManagementUnit")
radar_object = NodePath("RadarObject")

[node name="CombatObject" type="Node3D" parent="." groups=["combat_objects"]]
script = ExtResource("1_71hcp")

[node name="TargetingSystem" type="Node3D" parent="CombatObject"]
script = ExtResource("2_a7xhq")

[node name="TargetOverlay" parent="CombatObject" instance=ExtResource("4_o8dwl")]
script = ExtResource("5_ysmk8")

[node name="Left" parent="CombatObject/TargetOverlay" index="0"]
modulate = Color(0.258824, 0.811765, 1, 1)

[node name="Right" parent="CombatObject/TargetOverlay" index="1"]
modulate = Color(0.258824, 0.811765, 1, 1)

[node name="RigidBodyDirection" type="Node3D" parent="."]
script = ExtResource("3_5a5el")

[node name="RigidBodyThruster" type="Node3D" parent="."]
script = ExtResource("5_66pr6")

[node name="PowerManagementUnit" type="Node3D" parent="."]
script = ExtResource("6_4hum8")

[node name="RadarObject" parent="." instance=ExtResource("8_lf0ki")]

[connection signal="input_event" from="." to="CombatObject" method="_on_collision_object_input_event"]
[connection signal="targeted_by_changed" from="CombatObject" to="CombatObject/TargetOverlay" method="_on_targeted_by_changed"]
[connection signal="targeted_by_changed" from="CombatObject" to="RadarObject" method="_on_targeted_by_changed"]

[editable path="CombatObject/TargetOverlay"]
